# web_explorer_extension_with_mcp_server

./: README.md  agent.py  mcp_server.py  pyproject.toml
extension/: manifest.json  popup.html  popup.js  style.css
